_cocktails/1230_champs23_1/manifest/green.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    elbv2.k8s.aws/pod-readiness-gate-inject: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  green
  namespace: app
  labels:
    app:  green
spec:
  selector:
    matchLabels:
      app: green
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  green
    spec:
      readinessGates:
        - conditionType: target-health.alb.ingress.k8s.aws/green_green_8080
      containers:
      - name:  green
        image: 648911607072.dkr.ecr.ap-northeast-2.amazonaws.com/green:v1
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "45"]
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 100m
            memory: 128Mi
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 8080
          name:  green
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: green
  namespace: app
spec:
  selector:
    app: green
  type: ClusterIP
  ports:
  - name: green
    protocol: TCP
    port: 8080
    targetPort: 8080
