_cocktails/1230_champs23_1/manifest/blue-green-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-ingress
  namespace: app
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: blue-green-ingress
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "2"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/target-group-attributes: >-
      deregistration_delay.timeout_seconds=60
    alb.ingress.kubernetes.io/load-balancer-attributes: >-
      deletion_protection.enabled=true,
      access_logs.s3.enabled=true,
      access_logs.s3.bucket=dev-skills-logbucket20241230005214373400000001,
      access_logs.s3.prefix=accesslog,
      connection_logs.s3.enabled=true,
      connection_logs.s3.bucket=dev-skills-logbucket20241230005214373400000001,
      connection_logs.s3.prefix=connectionlog
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /green
        pathType: Exact
        backend:
          service:
            name: green
            port:
              number: 8080
      - path: /blue
        pathType: Exact
        backend:
          service:
            name: blue
            port:
              number: 8080
